# spinz

./: .gitignore  README.md  SESSION-LOG.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml  (+1 more)
.specify/extensions/v-model/.specify/extensions/v-model/: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extension.yml  pyproject.toml  requirements-dev.txt
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/data/seed_lists/: README.md  aoty_yearly.csv  bea_top_3000.csv  grammy_aoty.csv  pitchfork_2000s.csv  pitchfork_2010s.csv  rolling_stone_500.csv
apps/api/migrations/: README.md
apps/api/migrations/atlas_search/: README.md  albums_index.json
apps/api/scripts/: __init__.py  acknowledge_report.py  check_integrations.py  generate_seed_csvs.py  manage_critic_seed.py  mb_mirror_ingest.py  mb_mirror_verify.py  merge_albums.py  seed_catalog.py
apps/api/scripts/seed_sources/: __init__.py  _common.py  aoty_yearly.py  bea_top.py  pitchfork_decade.py  rolling_stone_500.py  wikipedia_grammy_aoty.py
apps/api/src/auxd_api/: db.py  dependencies.py  main.py  middleware.py  redis_client.py  settings.py
apps/api/src/auxd_api/lib/: __init__.py  audit.py  auth_tokens.py  ids.py  logging.py  observability.py  otel.py  rate_limit.py  resilience.py  secrets.py  sessions.py  storage.py  visibility.py
apps/api/src/auxd_api/migrations/: 001_initial.py  002_album_discogs_master_id.py  __init__.py  runner.py
apps/api/src/auxd_api/modules/: __init__.py
apps/api/src/auxd_api/modules/albums/: __init__.py  editions.py  errors.py  identity.py  models.py  routes.py  workers.py
apps/api/src/auxd_api/modules/auth/: __init__.py  email_verification.py  password.py  password_reset.py  routes.py  service.py  tokens_models.py
apps/api/src/auxd_api/providers/: __init__.py  base.py  discogs.py  errors.py  musicbrainz.py  transport.py
apps/api/src/auxd_api/routers/: __init__.py  v1.py
apps/api/src/auxd_api/workers/: __init__.py  auth_tokens_cleanup.py  catalog_seed_job.py  digest_dispatch.py  gdpr_export.py  main.py  moderation_scan.py  suggestions_job.py
apps/api/src/spinz_api/: main.py
apps/api/tests/: conftest.py  test_healthz.py  test_otel.py
apps/api/tests/integration/: _auth_helpers.py  test_account_deletion.py  test_account_settings_endpoints.py  test_acknowledge_report.py  test_album_detail_endpoint.py  test_app_lifespan_migrations.py  test_auth_endpoints.py  test_avatar_upload.py  test_backlog_endpoints.py  test_blocks.py  test_coalescer.py  test_diary_backlog_interaction.py  test_diary_edit.py  test_diary_logging.py  test_discogs_provider.py  test_email_adapter.py  test_email_unverified_middleware.py  test_email_verification_endpoints.py  test_feed_endpoint.py  test_follow_endpoints.py  test_follow_requests_endpoints.py  test_friends_endpoint.py  test_gdpr_cascade.py  test_gdpr_export.py  test_handle_change.py  test_in_app_adapter.py  test_log_perf.py  test_merge_albums_cli.py  test_moderation_scan.py  test_musicbrainz_provider.py  test_notification_endpoints.py  test_notification_types.py  test_onboarding_endpoint.py  test_onboarding_suppression.py  test_password_reset_endpoints.py  test_private_profile_gating.py  test_push_subscription_endpoints.py  test_rate_limit.py  test_redis_fail_modes.py  test_reports_album_endpoint.py  (+15 more)
apps/api/tests/perf/: __init__.py  k6_baseline.js  k6_feed_home.js  k6_search.js  k6_unread_count.js  test_feed_perf.py
apps/api/tests/unit/: test_admin_notes_not_serialised.py  test_albums_atlas_index.py  test_albums_editions.py  test_albums_identity.py  test_albums_model.py  test_albums_workers.py  test_auth_password.py  test_auth_tokens.py  test_backlog_models.py  test_db.py  test_diary_review_models.py  test_dispatcher.py  test_gdpr_audit.py  test_genre_signature.py  test_ids.py  test_logging_config.py  test_mb_mirror_search_text_with_filters.py  test_migration_runner.py  test_mutual_taste.py  test_notifications_moderation_models.py  test_observability.py  test_onboarding_card_ordering.py  test_prompts_seeding_models.py  test_providers_base.py  test_providers_errors.py  test_providers_transport.py  test_redis_client.py  test_resilience.py  test_review_likes.py  test_review_sort.py  test_search_composite_rerank.py  test_secrets.py  test_seeding_algorithm.py  test_sessions.py  test_settings.py  test_social_models.py  test_suggestions_algorithm.py  test_users_model.py  test_users_redirect.py  test_users_reserved.py  (+4 more)
(+948 files in other folders)
