[project]
name = "auxd-api"
version = "0.0.0"
description = "auxd backend — FastAPI + Pydantic v2 + Beanie + arq."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "cryptography>=44.0",                          # T017 envelope encryption (OAuth tokens, session HMAC)
  "svix-ksuid>=0.6.2",                           # T018 KSUID IDs (chronological-sort guarantee)
  "posthog>=3.7",                                # T015 product analytics client
  "sentry-sdk>=2.18",                            # T015 error tracking
  "opentelemetry-sdk>=1.28",                     # T015a tracing SDK
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-httpx>=0.49b0",
  "opentelemetry-exporter-otlp-proto-http>=1.28",
  "beanie>=1.27,<2",                             # T012 ODM — pinned to 1.x (2.x requires init_beanie() before Document instantiation, which breaks unit tests of model shape)
  "motor>=3.6",                                  # T012 async MongoDB driver (Beanie wraps this)
  "redis>=5.0",                                  # T013 async Redis client (cache + arq queue)
  "arq>=0.26",                                   # T013 background job queue (Redis-backed)
  "resend>=2.0",                                 # T135 transactional email SDK
  "boto3>=1.35",                                 # T010a + T149 R2 (S3-compat) client
  "truststore>=0.10",                            # native OS keychain trust (handles corporate TLS-MITM CAs)
  "httpx>=0.27",                                 # async HTTP client (Spotify/MusicBrainz/Resend) + required by opentelemetry-instrumentation-httpx import
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "hypothesis>=6",
  "mongomock-motor>=0.0.34",                     # in-memory motor mock for Beanie unit tests
  "respx>=0.21",                                 # T048/T049a httpx route mocking for provider contract tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auxd_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
