[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-kit-v-model"
version = "0.1.0"
description = "V-Model Extension Pack for Spec Kit"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "deepeval>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "eval: marks tests as LLM evaluation tests (may require API key)",
    "structural: marks tests as structural validation tests (deterministic)",
]
